--- a/code/style.css
+++ b/code/style.css
@@ -1,8 +1,9 @@
+
 html {
   background: #d8d7d5;
 } 
 
-/* header */
+/*---------------header----------------*/
 .header {
   display: flex;
   justify-content: space-between;
@@ -35,7 +36,7 @@ nav {
   display: none;
 }
 
-/* big news */
+/*-----------------big news--------------*/
 .big-news {
   display: flex;
   flex-direction: column;
@@ -53,10 +54,12 @@ nav {
   padding: 25px;
 }
 
-/* small news */
+/*--------------small news---------------*/
+
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1.5rem;
 }
 
 .grid-item {
@@ -64,7 +67,6 @@ nav {
   width: 300px;
   padding-top: 25px;
   margin: 10px;
-  /* border: 1px solid black;  */
   box-shadow: 10px 10px 5px darkgrey;
   display: flex;
   flex-direction: column;
@@ -81,12 +83,11 @@ nav {
   width: 250px
 }
 .grid-item:hover {
-  background-color: rgb(148, 148, 224);
+  background-color: rgb(200, 200, 206);
 }
 
-/* tablet*/
+/*----------tablet/header----------------*/
 @media (min-width: 768px) {
-  /* header */
   .logo {
     width: 200px;
   }
@@ -102,7 +103,7 @@ nav {
     color: crimson;
     margin-right: 20px;
   }
-  /* big news */
+  /*------------tablet/big news-----------*/
   .big-news {
     flex-direction: row;
     align-items: center;
@@ -112,29 +113,13 @@ nav {
     width: 300px;
     flex-grow: 4;
   }
-
-  /* small news */
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* desktop*/
-@media (min-width: 992px) {
-/* small news */
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  }
 }
 
 footer {
   display: flex;
-  text-align: center;
+  align-self: center;
   background-color: white;
-  padding: 10 px;
+  padding: 10px;
   margin-top: 20px;
-
 }
 
