--- a/code/style.css
+++ b/code/style.css
@@ -1,261 +1,252 @@
-html {
-  background: #D9CAB3;
-  color: black;
-  font-family: 'Besley', serif;
+body {
+  background-color: #ffffff;
+  color: #202121;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
+
+.container {
+  margin: 5%;
+}
+
+/* Header */
 
 header {
-display: flex;
-flex-direction: column;
-align-items: center;
-height: 100px;
-margin-bottom: 50px;
+  padding: 20px 5%;
+  box-shadow: 0 -50px 25px 50px #c9c9c9;
 }
 
-.logo {
-  height: 100%;
+.flex-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex-navbar {
+  list-style-type: none;
   margin: 0;
   padding: 0;
- }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
 
- .list {
-  list-style-type: none;
- }
+.flex-child {
+  margin-left: 18%;
+}
+
+a {
+  text-decoration: none;
+  color: #202121;
+  text-transform: uppercase;
+}
 
 .navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin: 0;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.75rem;
+}
+
+.navbar-brand {
+  font-size: 1.3rem;
+  font-weight: 800;
+}
+
+.navbar:hover {
+  color: #bbbbbb;
+}
+
+/* Paragraphs and Headlines */
+
+h1 {
+  font-size: 1.5rem;
+  margin: 0 0 10px 0;
+}
+
+h2 {
+  font-size: 1rem;
+  margin: 10px 0 10px 0;
+}
+
+p {
+  font-size: 0.875rem;
+  font-weight: 300;
+  line-height: 1.75rem;
+  margin: 10px 0 15px 0;
+}
+
+.hero-text p {
+  font-size: 1rem;
+  line-height: 2rem;
+  margin-bottom: 25px;
+}
+
+/* Images and Grid */
+
+.hero-image {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.link {
-  text-decoration: none;
-  color: black;
+.small-news-images {
+  object-fit: cover;
+  width: 100%;
+  height: 61vw;
 }
 
-.intro {
-  display: flex;
-  flex-direction: column;
-  color: black;
-  align-items: center;
+.small-news-section,
+.hero-article {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 40px;
 }
 
-.main-story {
-  width: 90%;
-  margin-bottom: 23px;
-  text-align: center;
-  font-size: 40px;
-  font-style: italic;
-  margin: 2% 0% 10% 0%;
+.hero-section {
+  margin-bottom: 40px;
 }
 
-.main-photo {
-  margin: 0px 10px 23px 10px;
-  height: 220px;
+.hero-image-container,
+.hero-text,
+.small-articles {
+  grid-column: span 4;
 }
 
-.main-photo:hover {
-  box-shadow: 12px 12px 2px 1px #5C3D2E;
+img:hover,
+h1:hover,
+h2:hover,
+p:hover {
+  cursor: pointer;
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
-  color: black;
-  align-items: center;
-  margin: 0px 10px 23px 10px;
-  text-align: center;
-}
+/* Responsiveness and Breakpoints */
 
-.card:hover {
-  box-shadow: 12px 12px 2px 1px #5C3D2E;
-}
-
-.card-photo {
-  width: -webkit-fill-available;
-  margin-bottom: 10px;
-  height: 200px;
-}
-
-.card-name {
- margin: 0% 0% 0% 0%;
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  margin: 0% 0% 0% 0%;
-  height: 200px;
-}
-
-@media (min-width: 668px) {
-  html {
-    background: #D9CAB3;
-    color: black;
+/* Specification for mobile */
+@media (min-width: 0px) and (max-width: 767px) {
+  .hidden-paragraph,
+  .hidden-paragraph-2 {
+    display: none;
   }
-  
+  .hero-article {
+    grid-gap: 20px;
+  }
+  .container {
+    margin-top: 40px;
+  }
+}
+
+/* Specification for smaller tablet */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .small-news-section,
+  .hero-article {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 40px;
+  }
+  .hero-image-container {
+    grid-column: span 6;
+  }
+  .hero-text {
+    grid-column: span 6;
+  }
+  .small-articles {
+    grid-column: span 6;
+  }
+  .hidden-paragraph-2 {
+    display: none;
+  }
+  .hero-section {
+    margin-bottom: 80px;
+  }
   header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100px;
-  margin-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
-  
-  .logo {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-   }
-  
-   .list {
-    list-style-type: none;
-   }
-  
-  .navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin: 0;
-    width: 100%;
-  }
-  
-  .link {
-    text-decoration: none;
-    color: black;
-  }
-
-  .intro {
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-bottom: 3%;
-    align-items: stretch
-  }
-
-  .main-story {
-    width: 50%;
-    margin-bottom: 23px;
-    text-align: center;
-    font-size: 40px;
-    font-style: italic;
-  }
-  
-  .main-photo {
-    width: 50%
-  }
-  
-  .main-photo:hover {
-    box-shadow: 12px 12px 2px 1px #5C3D2E;
-  }
-  
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: baseline;
-  }
-  
-  .card {
-    width: 47%;
-  }
-
-  .footer {
-  display: flex;
-  justify-content: center;
-  margin: 0% 0% 0% 0%;
-  height: 150px;
+  .small-news-images {
+    height: 29vw;
   }
 }
 
-@media (min-width: 1024px) {
+/* Specification for bigger tablets and small laptop */
+@media (min-width: 1024px) and (max-width: 1231px) {
+  .small-news-section,
+  .hero-article {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 40px;
+  }
+  .hero-image-container {
+    grid-column: span 8;
+  }
+  .hero-text {
+    grid-column: span 4;
+  }
+  .small-articles {
+    grid-column: span 6;
+  }
+  .hidden-paragraph-2 {
+    display: none;
+  }
+  .hero-section {
+    margin-bottom: 80px;
+  }
   header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
-  
-  .logo {
-    height: 200%;
-    margin: 0;
-    padding: 0;
+  .small-news-images {
+    height: 29vw;
+  }
+  article {
+    transition: all 0.2s ease-in-out;
+  }
+  article:hover {
+    transform: scale(1.03);
+  }
 }
 
-   .list {
-    list-style-type: none;
-   }
-  
-  .navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-    padding-left: 20%;
-    width: 50%;
+/* Specification for desktop */
+@media (min-width: 1232px) {
+  .small-news-section,
+  .hero-article {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 40px;
   }
-  
-  .link {
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
+  .hero-image-container {
+    grid-column: span 8;
   }
-  .intro {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch
-    color: black;
-    margin: 5%;
+  .hero-text {
+    grid-column: span 4;
   }
-  
-  .main-story {
-    height: 100%;
-    font-size: 50px;
-    font-weight: 600;
-    font-style: italic;
-    margin-top: auto;
+  .small-articles {
+    grid-column: span 3;
   }
- 
-  .main-photo {
-    height: 100%;
+  .flex-child {
+    margin-left: 30px;
   }
-
-  .card-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: baseline;
+  .hero-section {
+    margin-bottom: 80px;
   }
-
-  .card {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    align-items: center;
-    width: 23%;
+  header {
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
-  
-  .card:hover {
-    box-shadow: 12px 12px 2px 1px #5C3D2E;
+  footer {
+    display: none;
   }
-  
-  .card-photo {
-    width: -webki-fill-available;
-    margin: 10% 10% 1% 10%;
-    height: 150px;
+  .small-news-images {
+    height: 15vw;
   }
-  
-  .card-name {
-   margin: 0% 0% 0% 0%;
+  .small-articles {
+    transition: all 0.2s ease-in-out;
   }
-  
-  .footer {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-  } 
+  .small-articles:hover {
+    transform: scale(1.03);
+  }
+  .hero-article {
+    transition: all 0.2s ease-in-out;
+  }
+  .hero-article:hover {
+    transform: scale(1.01);
+  }
 }
