--- a/code/style.css
+++ b/code/style.css
@@ -1,236 +1,203 @@
-body {
+html {
     font-family: Work Sans;
 }
 
-/* Mobile first development
-width 375px */
-
-/* header {
-    display: flex;
-    justify-items: center;
-}
-
-nav {
-    display: none;
-}
-.bg-header {
-    display: none;
-}
-
-.logo {
-    width: 60px;
-    height: 60px;
-    margin-left: 20px;
-    margin-top: 6px;
-    margin-right: 10px;
-}
-
+/* Mobile first development */
 .pagewrapper {
-    display: flex;
-    flex-direction: column;
-    width: 385px;
+    padding: 30px;
 }
-
-h2 {
-    font-size: 16px;
-    width: 220px;
-    margin-left: 20px;
-}
-
-.main-news h2 {
-    margin: 0;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    width: 300px;
-}
-
-.main-news-content, .other-news-content, .read-more {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 300px;
-    text-align: justify;
-    text-justify: inter-word;
-}
-.main-news{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.other-news {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.content-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 350px;
-}
-
-.main-news-img img {
-    display: flex;
-    margin: auto;
-    width: 320px;
-}
-
-.other-news-img {
-    width: 300px;
-    height: 300px;
-    background-color: white;
-    box-shadow: 0 2px 2px rgba(136, 130, 130, 0.8);
-}
-.other-news-img img {
-    display: flex;
-    margin: auto;
-    padding-top: 10px;
-    width: 280px;
-    height: 200px;
-}
-
-.read-more {
-    color: rgb(106, 143, 185);
-    font-weight: 400;
-    text-decoration: none;
-}
-.read-more:hover {
-    font-weight: 600;
-}
-.animation-line {
-    height: 3px;
-
-}
-
-footer {
-    margin: 30px;
-    font-size: .5em;
-}
-
-/* If there's no forwards, the bars will disappear after it has expanded!
-tranfrom-origin 0 0 otherwise the bars will start to expand from the center
-to set it at 0 0 so it starts from the left of the x axis */
-
-/* .animation-line {
-    background: rgb(123, 148, 177);
-    margin-bottom: 1em;
-}
-header, .animation-line {
-    animation: fillBar 1s forwards;
-    transform: scaleX(0);
-    transform-origin: 0 0;
-}
-@keyframes fillBar {
-    to {
-        transform: scaleX(1)
-    }
-}
-
-@media screen and (min-width: 1300px)  */ 
-
-
-/* Desktop View */
-body {
-    margin: 0;
-    border: 0;
-}
-
 header {
-    display: block;
-    margin-bottom: 0;
-    height: 60px;
+    display: flex;
 }
-h1 {
-    display: inline-block;
-    font-size: 36px;
+.header-break-img {
+    display: none;
 }
-
 .logo {
-    width: 40px;
-    height: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 50px;
+    height: 50px;
 }
 
-nav {
-    display: inline-block;
-    margin-left: 10%;
+h1 {
+    margin-left: 10px;
+    font-size: 20px;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-li {
-    display: inline;
+h2 {
+    font-size: 5vw;
 }
 
-nav a {
-    margin: 30px;
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    
-}
-
-.pagewrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 350px);
-    grid-gap: 30px;
-    justify-content: center;
-}
-
-.main-news {
-display: flex;
-position: absolute;
-margin: 50px;
+p {
+    font-size: 3vw;
 }
 
 .header-img {
-    grid-column: 1;
+    display: none;
 }
-.other-news.1 {
-    grid-column: 1;
-}
-.other-news.2 {
-    grid-column: 2;
-}
-.other-news.3 {
-    grid-column: 3;
-}
-.other-news.4 {
-    grid-column: 4;
-}
-.other-news.5 {
-    grid-column: 1;
-}
-.other-news.6 {
-    grid-column: 2;
-}
-.other-news.7 {
-    grid-column: 3;
-}
-.other-news.8 {
-    grid-column: 4;
-}
-
-
-.main-news-img img{
-    width: 400px;
-    height: 290px;
-} 
-
-.other-news-img img {
-    margin: auto;
-    padding-top: 10px;
-    width: 280px;
-    height: 200px;
-}
-.animation-line {
+nav {
     display: none;
 }
 
+/* content boxes and images' sizes */
+.main-news-content, .main-news-img {
+    width: 50vw;
+}
+.other-news-content, .other-news-img img {
+    width: 40vw;
+}
+
+.other-news-img h3 {
+    font-size: .8em;
+    width: 140px;
+}
+
+
+
+/* Tablet view*/
+@media (min-width: 400px) and (max-width: 1000px) {
+    /* .pagewrapper {
+    display: grid;
+    width: 1000px;
+    grid-template-columns: repeat(2, 400px);
+    grid-gap: 20px;
+    } */
+    .logo {
+        margin-top: 10px;
+    }
+    h1 {
+        margin-left: 20px;
+    }
+    h2 {
+        font-size: 4vw;
+        width: 300px;
+    }
+    
+    p {
+        font-size: 3vw;
+    }
+    header {
+        margin: 30px;
+        width: 1000px;
+    }
+    .header-break-img {
+        display: flex;
+        height: 200px;
+    }
+    nav {
+        display: flex;
+        margin-top: 40px;
+    }
+    
+    ul {
+        list-style-type: none;
+        display: flex;
+        margin: 0;
+        padding: 0;
+    }
+    nav a {
+        margin: 30px;
+        text-decoration: none;
+        color: black;
+        font-weight: 600;   
+    }
+    .main-news-img {
+        height: 300px;
+        flex-direction: column;
+        align-self: center;
+    }
+    .main-news-content, .main-news-img {
+        width: 400px;
+        margin : 40px;
+    }
+    .other-news-content, .other-news-img img {
+        width: 280px;
+    }
+
+    /* main news */
+    .main-news {
+        display: flex;
+    }
+    /* other news */
+
+    .other-news-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        width: 900px;
+    }
+    .other-news {
+        flex: 50%;
+    }
+    
+}
+/* Desktop view*/
+
+@media (min-width: 1001px) {
+    /* .pagewrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 360px);
+    } */
+    header {
+        margin: 30px 30px 20px 30px;
+        height: 50px;
+        width: 1440px;
+    }
+    .logo {
+        margin-top: 10px;
+    }
+    h1 {
+        margin-left: 20px;
+    }
+    h2 {
+        font-size: 3vw;
+    }
+    
+    p {
+        font-size: 1.5vw;
+    }
+    .header-break-img {
+        display: flex;
+        width: 1400px;
+        height: 200px;
+    }
+    nav {
+        display: flex;
+        margin-top: 40px;
+        margin-left: 10%;
+    }
+    
+    ul {
+        list-style-type: none;
+        display: flex;
+        margin: 0;
+        padding: 0;
+    }
+    nav a {
+        margin: 60px;
+        text-decoration: none;
+        color: black;
+        font-weight: 600;   
+    }
+    /* main news */
+    .main-news-img {
+        height: 300px;
+        flex-direction: column;
+        align-self: center;
+    }
+    .main-news {
+        display: flex;
+    }
+    .main-news-content, .main-news-img {
+        width: 500px;
+        margin: 30px;
+    }
+    .other-news-content, .other-news-img img {
+        width: 300px;
+    }
+     /* other news */
+    .other-news-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        width: 1440px;
+    }
+    .other-news {
+        margin: 20px;
+    }
+}
