small-chenges-test

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,14 @@
 html {
-  background: #0025ff;
+  background: #1b4332ff;
   color: #fff;
 }
+
+@media (min-width: 668px) and (max-width: 1024px) {
+
+}
+
+@media (min-width:1025px) {
+
+}
+
+
