added images and logo

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,23 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #F5F5F5;
+}
+
+.logo {
+  width: 8rem;
+  margin: 1rem;
+}
+
+.menu-button {
+  width: 2rem;
+  margin: 1rem;
+}
+
+.big-news-img {
+  width: 25rem;
+  height: 35rem;
+  margin: 1rem;
+}
+
+.p {
+  size: 15px;
 }
