--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,18 @@
 * {
     font-family: Work Sans;
     margin: 0;
-    border: 0;
+    border:0;
+}
+
+footer {
+    font-size: .8em;
+    box-sizing: border-box;
+    text-align: center;
+    margin: 20px;
+}
+
+footer a {
+    color: rgb(51, 114, 233);
 }
 
 /* Mobile first development */
@@ -35,44 +46,60 @@ h1 {
 }
 h2 {
     font-size: 5vw;
-    
 }
 
+hr {
+    border: 1px solid grey;
+    margin: 5%;
+}
 p {
     font-size: 2.5vw;
     text-align: justify;
-    text-justify: inter-word;
+    line-height: 20px;
+    box-sizing: border-box;
+    margin-top: 10px;
 }
 .read-more {
     text-decoration: none;
     color: rgb(45, 101, 206);
 }
-
 .header-img {
     display: none;
 }
 nav {
     display: none;
 }
-
-/* content boxes and images' sizes */
-
-.other-news-wrapper {
-    justify-items: center;
-    align-items: center;
-}
-
+/* main news */
 .main-news-content, .main-news-img {
-    width: 50vw;
-}
-.other-news-content, .other-news-img img {
-    width: 40vw;
-}
-.other-news-img h3 {
-    font-size: .8em;
-    width: 140px;
+    width: 70vw;
 }
 
+/* other news */
+.other-news {
+    margin: 20px;
+}
+
+.other-news-img h3 {
+    font-size: 1em;
+    text-align: left;
+    padding: 10px;
+}
+.other-news-wrapper {
+    width: 70vw;
+}
+/* polaroid effect */
+.other-news-img {
+    background-color: white;
+    box-shadow: 0 2px 2px rgba(136, 130, 130, 0.8);
+}
+
+.other-news-img img {
+    width: 60vw;
+    display: flex;
+    margin: auto;
+    padding-top: 10px;
+    position: relative;
+}
 /* Animation part
 
 If there's no forwards, the bars will disappear after it has expanded!
@@ -90,17 +117,19 @@ header {
     }
 }
 
-
-
+a:hover {
+    font-size: 20px;
+    color: rgb(238, 207, 69);
+}
 
 /* Tablet view*/
-@media (min-width: 400px) and (max-width: 1000px) {
+@media (min-width: 668px) and (max-width: 1024px) {
+
     .logo {
         display: none;
     }
     .desktop-view-logo {
         display: flex;
-        margin-left: 20px;
         width: 200px;
         height: 150px;
     }
@@ -109,18 +138,17 @@ header {
     }
     h2 {
         font-size: 3vw;
-        width: 300px;
     }
+    
     p {
         font-size: 1.5vw;
     }
 
     .other-news-img h3 {
-        font-size: 2vw;
-        width: 300px;
+        font-size: 1.5vw;
     }
     header {
-        margin: 30px 30px;
+        margin-top: 40px;
         width: 100%;
     }
     .header-break-img {
@@ -144,53 +172,43 @@ header {
         font-weight: 600;   
     }
         /* main news */
+
+    .main-news-content, .main-news-img {
+            width: 40vw;
+            margin: 20px;
+        }
     .main-news-img {
-        height: 300px;
-        flex-direction: column;
-        align-self: center;
-    }
-    .main-news-img {
-        width: 300px;
-        height: 240px;
-    }
-    .main-news-content {
-        margin-left: 50px;
-        width: 300px;
+        flex-direction: row;
+        align-self: center; 
     }
     .main-news {
         display: flex;
         flex-direction: row;
         justify-items: center;
-        align-items: center;
+        padding: 10px 20px 20px 20px;
     }
     /* other news */
 
     .other-news-wrapper {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 40px;
-        justify-content: center;
     }
     .other-news {
-        flex: 50%;
-        width: 100%;
-        align-self: center;
-    }
-    .other-news-content, .other-news-img img {
-        width: 280px;
+        flex: 20%;
     }
     .other-news-img img {
-        height: 200px;
+        width: 30vw;
     }
     
 }
 /* Desktop view*/
 
-@media (min-width: 1001px) {
+@media (min-width: 1025px) {
     header {
         margin: 10px 30px 20px 30px;
         height: 50px;
-        width: 1440px;
+        width: 100%;
     }
     .logo {
         display: none;
@@ -205,16 +223,11 @@ header {
         display: none;
     }
     h2 {
-        font-size: 3vw;
-    }
-
-    .other-news-img h3 {
-        font-size: 1.5vw;
-        width: 320px;
+        font-size: 2vw;
     }
     
     p {
-        font-size: 1.5vw;
+        font-size: 1vw;
     }
     .header-break-img {
         display: flex;
@@ -250,24 +263,25 @@ header {
         justify-content: center;
     }
     .main-news-content, .main-news-img {
-        width: 500px;
+        width: 30vw;
+        margin: 30px;
     }
-    .main-news-content {
-        margin-left: 50px;
-    }
-       /* other news */
-    .other-news-content, .other-news-img img {
-        width: 300px;
-    }
-    .other-news-img img {
-        height: 200px;
-    }
+
+    /* other news */
     .other-news-wrapper {
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
+        width: 100vw;
     }
     .other-news {
-        margin: 20px;
+        flex: 1;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .other-news-img img {
+        width: 20vw;
     }
 }
 
