--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,132 @@
+body {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
 
-img {
-  width: 300px;
+.header,
+.aside { 
+  width: 1000px;
+}
+
+h1 {
+  background: -webkit-linear-gradient(#3723AC,#9239A2, #CF459A);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  margin-left: 10px;
+  font-size: 50px;
+}
+
+article div {
+  padding: 0 5px 10px 5px;
+}
+
+article {
+  border: 1px solid black;
+  display: flex;
+  position: relative;
+}
+
+.article__image {
+  width: 100%;
+}
+
+.article__text {
+  z-index: 100;
+  position: absolute;
+  background-color: rgba(255,255,255,.7);
+  width: 30%;
+  height: 100%; 
+}
+
+.header__list,
+.footer__list {
+  list-style-type: none;
+}
+
+.header__list {
+  text-align: left;
+  padding-left: 10px;
+}
+
+.footer__list {
+  text-align: center;
+  font-weight: bolder;
+}
+
+.footer__list li{
+  display: inline-block;
+}
+
+@media (min-width: 667px) and (max-width: 1024px) {
+  body {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .aside {
+    display: none;
+  }
+}
+
+@media (min-width: 1025px) {
+  .wrapper {
+    display: flex;
+  }
+
+  .section__image {
+    width: 200px;
+    height: auto;
+  }
+
+  .grid__top-left,
+  .grid__middle-left,
+  .grid__bottom-left {
+    margin-left: 5px;
+  }
+
+  .article__top-left { grid-area: one; }
+  .article__top-right { grid-area: two; }
+  .article__middle-left { grid-area: three; }
+  .article__middle-right { grid-area: four; }
+  .article__bottom-left  { grid-area: five; }
+  .article__bottom-right { grid-area: six; }
+  .aside { grid-area: aside; }
+  .footer { grid-area: footer; }
+
+  .grid {
+    display: grid;
+    grid-template-areas:
+      'one one two two aside'
+      'three three four four aside'
+      'five five six six aside'
+      'footer footer footer footer footer';
+    gap: 10px;
+  }
+
+  .section {
+    position: relative;
+    margin-bottom: 30px ;
+  }
+
+  .section__paragraph,
+  .section__header {
+    padding: 0 10px;
+  }
+
+  .section__text {
+    z-index: 100;
+    position: absolute;
+    font-size: 24px;
+    font-weight: bold;
+    bottom: 0;
+    background-color: rgba(255,255,255,.8);
+    width: 100%;
+  }
+
+  .section__image {
+    width: 100%;
+    height: auto;
+  }
 }
