--- a/code/style.css
+++ b/code/style.css
@@ -122,7 +122,7 @@ a:hover {
 }
 
 /* Tablet view*/
-@media (min-width: 668px) and (max-width: 1024px) {
+@media (min-width: 668px) {
 
     .logo {
         display: none;
