added the first styling

--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,27 @@
 html {
   background: #1b4332ff;
   color: #fff;
+  
 }
+
+.logo img {
+  width: 20%;
+  border-radius: 50%;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 150%;
+  padding: 0 5%;
+}
+
+input {
+  width: 90%;
+}
+
+
+
 
 @media (min-width: 668px) and (max-width: 1024px) {
 
