--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@ html {
 body {
   margin: 0 auto;
   min-height: 100vh;
-  max-height: 100vw;
+  max-width: 100vw;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
 }
@@ -16,7 +16,8 @@ body {
 h1 {
   font-family: 'Playfair Display', serif;
   text-transform: uppercase;
-  font-size: 2.5em;
+  font-size: clamp(1.5rem, 2.5vw, 5rem);
+  padding-left: 0.3em;
 }
 
 h1 > span {
@@ -28,22 +29,6 @@ h2 {
 }
 
 /* NAVBAR */
-
-
-
-ul {
-  margin: 0;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-li {
-  font-family: 'Be Vietnam Pro', sans-serif;
-  color: #E7DCCB;
-  font-weight: 300;å
-  list-style: none;
-}
-
 .main-header {
   background: #81B29A;
   padding: 1em 1.5em 0 1em;
@@ -56,15 +41,84 @@ li {
   display: flex;
 }
 
+.logo {
+  max-height: 5.5em;
+  align-self: flex-end;
+}
+
 .nav-hamburger{
   color: #222222;
   font-size: 3em;
 }
 
-.sub-header {
+.sub-header { 
   background: #826E5B;
 }
 
 
+@media (max-width: 767px) {
+  .sub-header--navbar {
+    transform: translateX(200%);
+    transition: transform 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  }
+
+  .sub-header ul {
+    font-size: 0;
+  }
+
+  .main-header {
+    border-bottom: 2em solid #826E5B;
+  }
+}
+
+/* NAVBAR ON TABLET AND DESKTOP*/
+
+@media (min-width: 768px) {
+  .nav-hamburger {
+    transform: translateY(-1000%);
+    transition: transform 500ms ease-in-out;
+  }
+  
+  ul {
+    margin: 0;
+    padding: 0.5em 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+  }
+  
+  li > a {
+    display: flex;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    font-size: 1.25em;
+    color: #E7DCCB;
+    text-decoration: none;
+    font-weight: 300;
+  }
+
+  li > a:hover,
+  li > a:focus {
+    color: #E07A5F;
+    transition: all 500 cubic-bezier(0.19, 1, 0.22, 1);
+    transform: scale(1.2);
+  }
+}
+
+@media (min-width: 991px){
+  .logo {
+    max-height: 15.5em;
+  }
+
+  .sub-header > ul {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .sub-header > ul > li {
+    padding-right: 3.5em;
+  }
+}
+
 /* LAYOUT */
 
+@media (min-width: 768px) and (max-width: 991px){}
