--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,59 @@
+/* Style for Project 2, Technigo Bootcamp: News site */
+
+
 html {
-  background: #0025ff;
-  color: #fff;
+  /*scroll-behavior: smooth;*/
+  background: rgb(255, 225, 174);
+  color: rgb(242, 65, 57);
+  min-width: 320px;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  background-color: teal;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
+}
+
+ .logo {
+  width: max-content;
+ }
+
+.navbar-item-1, .navbar-item-2, .navbar-item-3, .navbar-item-4 {
+  margin: 10px;
+  border: 2px solid rgb(255, 225, 174);
+  border-radius: 5px;
+  padding: 5px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image {
+  width: 10%;
+  
+}
+
+button {
+  height: 40px;
+  display: block;
+  padding: 10px 20px;
+  border: none;
+  background: #1301FF;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+}
+
+
